# lazy-commit-revert

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: lcr.h  lcr_test.cpp
